--- a/css/cWriteSch.css
+++ b/css/cWriteSch.css
@@ -158,7 +158,7 @@ input[name="ds"]:checked + label .check::after { content: '✓'; color: #fff; ba
 .schInfo .schLoc::before { top: -15%; left: -7%; } 
 
 .dayOne { margin-bottom: 20px; } 
-.daySch { width: auto; padding: 0 20px;}
+.daySch { width: 90%; padding: 0 10px;}
 .dayTxt { margin: 0 0 10px 0; } 
 
 .daySch .dNum { padding: 6px 10px; margin-right: 0; background: #e8e8e8; font-size: 14px;} 
@@ -167,14 +167,11 @@ input[name="ds"]:checked + label .check::after { content: '✓'; color: #fff; ba
 .dayOne .locAdd { margin-right: 0; padding: 7px 9px; border-radius: 8px; background: var(--yellow); font-size: 14px; } 
 .locAdd:hover { background: #e8e8e8; } 
 
+.daySch::-webkit-scrollbar { width: 5px; } 
 .daySch .schMemo { margin: 0 0 20px 0; } 
 .daySch .schMemo .memoCnt { margin-right: 8px; font-size: 14px; border-radius: 50%; } 
 .daySch .schMemo .memoTxt { width: auto; padding: 10px; border-radius: 8px; font-size: 14px; } 
 
-
-
-
- 
  .submitBtn { display: block; margin: 20px auto; width: 100px; padding: 8px 0; background: #ffd438c5; border-radius: 7px; font-size: 15px; } 
  
  }
