--- a/css/headFoot.css
+++ b/css/headFoot.css
@@ -76,10 +76,10 @@ footer p { margin-top: 10px; color: #222; }
  .cursor { visibility: hidden; } 
  .cursor_follower { visibility: hidden; } 
 
- header .headLogo { width: 130px; margin-top: 10px; } 
+ header .headLogo { width: 120px; margin: 5px 0 0 -10px; } 
  header nav { display: flex; align-items: center; justify-content: center; padding:  5px 5.5%; } 
 
- .menuTrigger { display: block; position: relative; top: -9px; right: 0; user-select: none;} 
+ .menuTrigger { display: block; position: relative; top: -9px; right: -5px; user-select: none;} 
  .menuTrigger span { display: block; width: 26px; height: 3px; margin-bottom: 4px; position: relative; background: #a5a5a5; border-radius: 3px; transform-origin: 4px 0px; transition: transform 0.5s cubic-bezier(0.77,0.2,0.05,1.0), background 0.5s cubic-bezier(0.77,0.2,0.05,1.0), opacity 0.55s ease; } 
 .menuTrigger span:nth-child(3) { transform-origin: 0% 0%; } 
 .menuTrigger span:last-child { transform-origin: 0% 100%; } 
