--- a/css/main.css
+++ b/css/main.css
@@ -158,16 +158,22 @@ to { opacity: 1; transform: none; }
 
  /* ------------------ slider --------------------- */
  .slider .bn { height: 25vh; margin: 50px 0 30px 0; } 
- .bContent p { padding: 0 25px; text-shadow: 2px 2px 6px #1c1c1cd7; font-size: 28px; text-align: center;} 
+ .bContent p { padding: 0 25px; text-shadow: 2px 2px 6px #1c1c1cd7; font-size: 20px; text-align: center; } 
 
 
  /* -------------------- 여행 상품 ------------------------------- */
  .itemAll { margin: 20px 0; padding-bottom: 30px; display: flex; flex-direction: column; } 
- .itemOne { width: 100%; height: 335px; margin: 15px 0; } 
+ .itemOne { width: 100%; height: 100%; margin: 15px 0; } 
  .itemOne:nth-child(2) ~ .itemOne { display: none; } 
+ .itemOne .post { height: 160px; } 
 
  .postImg { width: 100%; } 
  .postImg img { width: 100%; height: 100%; object-fit: cover; position: absolute; top: 50%; left: 50%; transform: translate(-50%, -50%); transition: transform 0.3s; } 
+ .postBottom { width: 90%; height: 70px; } 
+
+ .postBottom .infoText { font-size: 16px; } 
+ .locPay p { font-size: 13px; } 
+
 
  /* ------------------- 동행 ------------------- */
  .groAll, .schAll { width: 100%; margin: 20px 0; display: flex; flex-direction: column; } 
@@ -176,16 +182,19 @@ to { opacity: 1; transform: none; }
  .schOne { width: 100%; height: 100%; position: relative; border-radius: 15px; box-shadow: 1px 1px 7px #8585856b; } 
  .goDetail:nth-child(2) ~ .goDetail { display: none; } 
  
- .schTopInfo { width: 82%; height: 50px; padding: 5px 15px; border-radius: 13px; } 
+ .schTopInfo { width: 82%; height: 44px; padding: 5px 15px; border-radius: 13px; font-size: 12px; } 
  .schTopInfo .subTxt { font-size: 13px; } 
- .schOne .post { width: 100%; height: 180px; } 
+ .schOne .post { width: 100%; height: 170px; } 
+ 
+ .postLoc { top: 27%; padding: 7px 10px 7px 22px; font-size: 11px; border-radius: 8px; }
+ .postLoc::before { top: 20%; left: 6%; }
+
  .goDetail .postImg { width: 100%; } 
  
- .goDetail .postBottom { width: 90%; padding: 10px 0 20px 0; } 
- .goDetail .postBottom h3 { width: 100%; } 
- .goDetail .postBottom p { width: 100%; } 
+ .goDetail .postBottom { width: 90%; height: 100%; padding: 5px 0 15px 0; } 
+ .goDetail .postBottom h3 { width: 98%; font-size: 16px; } 
+ .goDetail .postBottom p { width: 98%; margin-top: 7px; font-size: 13px; } 
 
- .postLoc { top: 28%; padding: 7px 10px 7px 28px; font-size: 12px; border-radius: 8px; } 
  .hiddenBox { height: 45px; padding: 20px 23px; font-size: 13px; } 
  .hiddenBox .viewCnt::before { top: -2px; left: -25px; } 
  .hiddenBox .chatCnt::before { top: -2px; left: -25px; } 
@@ -197,12 +206,19 @@ to { opacity: 1; transform: none; }
  .schAll .schOne:nth-child(2) ~ .schOne { display: none; } 
  .schOne .schMap { width: 100%; height: 200px; } 
 
+ .schBottom { height: 50px; font-size: 14px; }
+ .dayAll { height: 100%;}
+ .dayAll span.day { padding: 6px 11px; margin: 0 5px 5px 0; font-size: 12px; }
+
+ .locList ul { font-size: 14px; }
+ .locList ul li { padding: 15px 0 15px 22px; }
+
 
  /* ---------- scrollTop ------------- */
-#scrollTop { width: 50px; height: 50px; bottom: 30px; right: 25px; } 
+#scrollTop { width: 48px; height: 48px; bottom: 30px; right: 25px; } 
 #scrollTop:hover { background-color: #fff; } 
-#scrollTop::before { top: 7px; left: 15px; font-size: 25px; } 
-#scrollTop .topTxt { margin-top: 23px; font-size: 14px; } 
+#scrollTop::before { top: 7px; left: 15px; font-size: 22px; } 
+#scrollTop .topTxt { margin-top: 23px; font-size: 13px; } 
  }
 
 @media screen and (min-width: 1024px) { body { } 
