--- a/css/cSchedule.css
+++ b/css/cSchedule.css
@@ -80,13 +80,17 @@ section { min-height: calc(100vh - 240px); padding: 0 9%; margin-top: 200px; }
  .goDetail { width: 100%; } 
  .schOne { width: 100%; height: 100%; position: relative; margin-bottom: 20px; border-radius: 15px; box-shadow: 1px 1px 7px #8585856b; } 
  
- .schTopInfo { width: 82%; height: 50px; padding: 5px 15px; border-radius: 13px; } 
- .schTopInfo .subTxt { font-size: 13px; } 
- .schOne .post { width: 100%; height: 180px; } 
+ .schTopInfo { width: 82%; height: 44px; padding: 5px 15px; border-radius: 13px; font-size: 12px; } 
+ .schTopInfo .subTxt { font-size: 13px; }  
+ .schOne .post { width: 100%; height: 170px; } 
  .schOne .schMap { width: 100%; height: 200px; } 
  
- .pagination { display: none; } 
+ .pagination { display: none; }
 
+ .schBottom { height: 50px; font-size: 14px; }
+ .dayAll { height: 100%;}
+ .dayAll span.day { padding: 6px 11px; margin: 0 5px 5px 0; font-size: 12px; }
+ 
  .postBtn { padding: 0; background: var(--color-main); font-family: pMedium; box-shadow: 0 1px 6px #36363689; color: #171717; align-content: center; width: 48px; height: 48px; bottom: 30px; right: 25px; border-radius: 50%; text-align: center; position: fixed; z-index: 100; cursor: pointer; } 
  .postBtn:hover { transition: 0.5s ease; background-color: #efefef; } 
  .postBtn::before { content: ""; background: url(../source/writeIco.png) center center no-repeat; position: absolute; width: 26px; height: 26px; top: 9px; left: 10px; background-size: cover; } 
