--- a/css/store.css
+++ b/css/store.css
@@ -24,13 +24,16 @@ h3::before { content: ""; position: absolute; top: 12px; left: -5px; width: 135p
 
 /* ----------------------------------------------------- */
 @media screen and (max-width: 768px) {
-    section { padding: 0 8%; }
-    .ctryBanner { flex-direction: column;}
-    .ctryBanner .ctry { margin: 10px 0; width: 100%; height: 150px; border-radius: 20px; }
+    section { padding: 0 8%; margin-top: 80px; }
+    .ctryBanner { flex-direction: column; padding-bottom: 20px;}
+    .ctryBanner .ctry { margin: 10px 0; width: 100%; height: 150px; border-radius: 17px; }
     .ctryBanner .ctry .ctryBg { width: 100%;}
+    
+    .ctryTxt h4 { font-size: 18px;}
+    .ctryTxt p { font-size: 14px; }
 
-    .slider .bn { height: 240px; margin: 60px 0 50px 0; }
-    .slider .bn p { margin: 0 20px; width: 100%; text-align: center;}
+    .slider .bn { height: 240px; margin: 30px 0; }
+    .slider .bn p { margin: 0 20px; width: 100%; font-size: 20px; text-align: center;}
  } 
  
 @media screen and (min-width: 1024px) { 
