--- a/css/mypage.css
+++ b/css/mypage.css
@@ -278,3 +278,50 @@ font-family: pSemi; font-size: 16px; width: 250px;}
     background-color: #b4b4b4;
     box-shadow: none;
 }
+
+
+/* --------------- responsible --------------- */
+
+@media screen and (max-width: 768px) {
+    section { margin: 80px 0 30px 0; padding: 0 5.5%; } 
+    .myInner { flex-direction: column; } 
+    .mypageGnb { width: 100%; height: auto; padding: 0; }
+    .mypageGnb ul { display: flex; flex-wrap: wrap; margin-top: 10px; }
+    .mypageGnb ul li { width: 50%; margin: 5px 0; }
+    .mypageGnb ul li:first-child { width: 100%; }
+
+    .menuin img { width: 25px; }
+    .menuin .mypimg { width: 50px;}
+    .menuin span { margin-left: 10px; font-size: 15px; }
+
+    .mypageCon { margin-top: 40px; width: auto; }
+    .mypageName { font-size: 18px; padding: 0 0 20px 0;}
+
+    .mmgide { margin-top: 15px; }
+    .mmImgid { display: none; }
+    .mmnow { margin: 0; }
+    .mmnow h1 { font-size: 15px;}
+    .mmnow .mmnowbox { padding: 10px; margin: 10px 0 15px 0; font-size: 14px; }
+    .mmnow .mmnowbox .mmLine { margin: 0 15px;}
+
+    .mmyourchal { width: auto; margin-top: 10px;}
+
+    .howto img { width: 330px; margin: 0;}
+    .howto p { font-size: 13px; }
+
+    .mannerLevel { flex-wrap: wrap; }
+    .mannerLevel .mlb { width: 17%; }
+    .mlbInner { margin: 5px 0; font-size: 13px; }
+
+    }
+   
+   @media screen and (min-width: 1024px) { body { background-color: aqua; } 
+   
+    .desktop { display: block; } 
+    header { } 
+   
+    footer { } 
+    }
+   
+   @media screen and (min-width: 1440px) { body { background-color: gray; } 
+    }
