--- a/css/mypage.css
+++ b/css/mypage.css
@@ -58,7 +58,7 @@ section { min-height: calc(100vh - 240px); margin: 170px 0 70px 0; padding: 0 9%
 .myintro { margin-top: 20px; } 
 .myintTop { display: flex; justify-content: space-between; align-items: center; } 
 .myintTop p { font-size: 16px; font-family: pSemi; color: #717171; } 
-.myintTop button { cursor: pointer; background-color: #ffd027a3; color: black; padding: 5px 13px; border-radius: 5px;font-family: pMedium; font-size: 15px; text-align: center; } 
+.myintTop button { cursor: pointer; background-color: #ffd027a3; color: black; padding: 5px 13px; border-radius: 5px; font-family: pMedium; font-size: 15px; text-align: center; } 
 
 
 .cmmtBox { margin-top: 20px; padding: 18px 0; display: flex; align-items: center; justify-content: space-between; background: #eee; border-radius: 10px; border: 2px solid transparent; transition: all .2s; } 
@@ -212,7 +212,7 @@ to { opacity: 1; transform: none; }
 .mmnowMycon span { color: var(--color-main); font-size: 19px; font-size: pBold; } ow
 .mmforyou { margin-top: 5px; } 
 
-.mmyourchal { padding: 18px 40px; background-color: #fff6c277; border-radius: 5px; margin-top: 20px; display: flex; justify-content: space-between; align-items: center;font-family: pSemi; font-size: 16px; width: 250px; } 
+.mmyourchal { padding: 18px 40px; background-color: #fff6c277; border-radius: 5px; margin-top: 20px; display: flex; justify-content: space-between; align-items: center; font-family: pSemi; font-size: 16px; width: 250px; } 
 .mmyourchal span { color: var(--color-main); } 
 .mmyourchal img { width: 35px; } 
 .mylevel span { color: #222; } 
@@ -279,7 +279,9 @@ to { opacity: 1; transform: none; }
  .mmgide { margin-top: 15px; } 
  .mmImgid { display: none; } 
  
- .gione { flex-direction: column; margin: 0; } 
+ .manners { padding: 0; margin-top: 30px; border: none; }
+ .gione { flex-direction: column; margin: 0; padding-bottom: 20px; border-bottom: 1px solid var(--color-line); } 
+ .gitwo { margin-top: 20px;}
  .mmnow { margin: 0; width: 100%; } 
  .mmnow h1 { font-size: 15px; } 
  .mmnow .mmnowbox { justify-content: space-between; padding: 10px 28px; margin: 10px 0 20px 0; font-size: 14px; } 
@@ -287,12 +289,13 @@ to { opacity: 1; transform: none; }
  
  .mmyourchal { width: auto; margin-top: 10px; } 
  
+ .howto { margin-bottom: 20px; }
  .howto img { width: calc( 100vw * 650 / 768); margin: 0; } 
  .howto p { color: #666; font-size: 13px; line-height: 120%; text-align: left; } 
  .sment { top: 3%; left: 7%; } 
  .fment { top: 63%; left: 0; } 
  
- .gionement { margin: 0; } 
+ .gionement { margin: 0; background: #f1f1f1; padding: 13px 15px;} 
  .gionement h1 { font-size: 18px; } 
  .gionement p:first-child { color: #888; font-size: 13px; } 
  .gionement p:last-child { font-size: 12px; } 
@@ -302,22 +305,39 @@ to { opacity: 1; transform: none; }
  .mlbInner { margin: 5px 0; font-size: 13px; } 
  
  /* -------------- mysetting -------------- */
- .proset { width: 100%;}
+ .proset { width: 100%; } 
  .mpname span { font-size: 14px; } 
 
  .userimname .uEdit { margin: 0; } 
  .userimname p { padding: 5px 10px; background: var(--color-main); color: #fff; font-size: 13px; border-radius: 15px; } 
- .userimname .mpnid { margin-top: 15px; background: #fff; border: 1px solid #e0e0e0; } 
+ .userimname .mpnid { margin-top: 10px; background: #fff; border: 1px solid #e0e0e0; } 
 
- .birgen { display: inline-block; width: auto; margin-top: 30px; } 
-.mybirth p { margin-bottom: 10px; font-size: 16px; font-family: pSemi; color: #717171; } 
-.mybirth span { display: inline-block; width: 80px; background-color: #f0f0f0; padding: 10px; margin-right: 6px; color: #888; font-size: 13px; } 
+ .cmmtBox { margin-top: 10px; padding: 10px; border-radius: 8px;}
+ .cmmtBox textarea { padding: 0; font-size: 13px;}
 
+ .birgen { display: inline-block; width: 100%; margin-top: 30px; } 
+ .birgen .mybirth p { margin-bottom: 10px; font-size: 16px; } 
+.birgen .mybirth span { display: inline-block; width: 25%; background-color: #f0f0f0; padding: 10px; margin-right: 0; font-size: 13px; } 
+.birgen .mygen p { margin: 10px 0;} 
+.birgen .mygen span { display: inline-block; width: 25%; background-color: #f0f0f0; padding: 10px; font-size: 13px;}
+
+.btns { width: 100%; display: flex; justify-content: space-between; }
+.btns button { justify-content: space-between; height: auto; padding: 10px 12px; width: auto; font-size: 13px;}
+.btns button .arrow { margin-left: 5px; width: 8px; height: 8px; border-width: 1px;}
+
+.mypaModal { width: 100%; height: 100%; z-index: 100; display:none; -webkit-box-align:center; align-items: center; -webkit-box-pack: center; justify-content: center; box-sizing: border-box; background: rgba(25, 25, 25, 0.5); padding: 34px 0px; opacity: 1; transition: opacity 0.6s ease 0s; } 
+.myMp { width: 350px; padding: 30px; border-radius: 10px; margin: 100px auto; border: solid 1px var(--color-line); } 
+
+.chPwd { padding: 0;}
+.chPwd input { width: 100%; padding: 10px 15px; }
+.modalname { font-size: 17px; color: #000;}
+.modlabtn { width: auto; }
+.modlabtn .mychBtn { width: auto; padding: 6px 15px; font-size: 13px; }
+.modlabtn .mychBtn:first-child { margin-right: 10px; }
 }
  
  @media screen and (min-width: 1024px) { body { background-color: aqua; } 
  
- .desktop { display: block; } 
  header { } 
  
  footer { } 
